--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,14 +1,34 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Login Page</title>
 </head>
+<style type="text/css">
+	body{
+		font-family: Arial, Helvetica, sans-serif;;
+	}
+</style>
 {% load static %}
-<body style="background-image: url({% static 'images/OG1FLx.jpg' %})">
-	<form method="POST" enctype="html/text" action="{% url 'login' %}" >
+<body style="background-image: url({% static 'users/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
+	<div style="position: fixed;  top: 30%;  left: 50%;transform: translate(-50%, -50%); ">
+		<form method="POST" enctype="html/text" action="{% url 'login' %}" >
 		{% csrf_token %}
-		{{usfo.as_table}}
+
+		<!-- {{usfo.as_table}} -->
+		<div style="margin-bottom: 10px;">
+			<div >{{usfo.email.label}}</div>
+			<div>{{usfo.email}}</div>
+		</div>
+		
+		<div style="margin-bottom: 5px;">
+			<div >{{usfo.password.label}}</div>
+			<div>{{usfo.password}}</div>
+		</div>
+		<!-- <div>{{usfo.password.label}}<br>{{usfo.password}}</div> -->
+
 	<input type="submit" name="submit" value="SUBMIT">
 	</form>
+	</div>
 </body>
 </html>
