static location changes

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -9,7 +9,7 @@
 	}
 </style>
 {% load static %}
-<body style="background-image: url({% static 'users/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
+<body style="background-image: url({% static 'static/images/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
 	<div>
 		<div style="margin-top: 30px; float: right;">
 
