--- a/templates/users/main-page.html
+++ b/templates/users/main-page.html
@@ -11,7 +11,7 @@
 {% load static %}
 <body style="background-image: url({% static 'users/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
 	<div>
-		<div></div>
+		<!-- <div><div style="display: inline-block;font-size: 25px; margin-right: 10px;color: red;">{{name}}</div></div> -->
 		<div style="margin-top: 30px; float: right;">
 
 			<a href="{% url 'login' %}"><div style="display: inline-block;font-size: 25px; margin-right: 10px;color: red;">Bookings</div></a>
@@ -21,7 +21,10 @@
 		<!-- <a href="{% url 'logout' %}">Logout</a> -->
 		<!-- {{usfo.as_table}}<br> -->
 		<!-- <img src="{% static 'users/flight1320x742.jpg' %}"> -->
-		<div style="position: fixed;  top: 50%;  left: 50%;  transform: translate(-50%, -50%); color: red; font-family:  Arial, Helvetica, sans-serif; font-size:40px;"> happy journey</div>
+		<!-- <div style="position: fixed;  top: 50%;  left: 50%;  transform: translate(-50%, -50%); color: red; font-family:  Arial, Helvetica, sans-serif; font-size:40px;"> happy journey</div> -->
+		<div>
+			
+		</div>
 	</div>
 </body>
 </html>
