static location changes

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -10,7 +10,7 @@
 	}
 </style>
 {% load static %}
-<body style="background-image: url({% static 'static/images/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
+<body style="background-image: url({% static 'images/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
 	<div style="position: fixed;  top: 30%;  left: 50%;transform: translate(-50%, -50%); ">
 		<form method="POST" enctype="html/text" action="{% url 'login' %}" >
 		{% csrf_token %}
