--- a/templates/users/main-page.html
+++ b/templates/users/main-page.html
@@ -9,7 +9,7 @@
 	}
 </style>
 {% load static %}
-<body style="background-image: url({% static 'static/images/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
+<body style="background-image: url({% static 'images/flight1320x742.jpg' %});width: 1000px; margin: 0 auto;">
 	<div>
 		<!-- <div><div style="display: inline-block;font-size: 25px; margin-right: 10px;color: red;">{{name}}</div></div> -->
 		<div style="margin-top: 30px; float: right;">
